[package]
name = "chat"
version = "0.1.0"
authors = ["runner"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1"
serde = { version = "1", features = ["rc", "derive"] }
serde_json = "1.0.107"
tokio = { version = "1", features = ["sync"] }
